--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -17,12 +17,12 @@ Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, Kero Kero Bonito-
     Violence, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9", "\u2605STAR GUiTAR-\
     \ Live", Camp Cope- How To Socialize & Make Friends, Alva Noto & Ryuichi Sakamoto-
     Glass, 'Oathbreaker- 10:56 / Second Son of R.', clipping. - The Deep, Hookworms-
-    Ullswater, DJ Shadow - Horror Show, Protest the Hero - Caravan, Sorority Noise-
-    No Halo, Shamir - Straight Boy, Mutemath - Prytania, Meshuggah - I, Rapsody -
-    Power, Sylvan LaCue- Empathy, TRUTHR- Earth II, Kamasi Washington- Truth, London
-    Grammar- Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4\
-    nger", Shame- Dust on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan, Pryapisme
-    - Totipotence D'un Erg, Meniscus- Doom]
+    Ullswater, DJ Shadow - Horror Show, Protest the Hero - Caravan, Black Moth- Moonbow,
+  Sorority Noise- No Halo, Shamir - Straight Boy, Mutemath - Prytania, Meshuggah -
+    I, Rapsody - Power, Sylvan LaCue- Empathy, TRUTHR- Earth II, Kamasi Washington-
+    Truth, London Grammar- Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary\
+    \ Doppelg\xE4nger", Shame- Dust on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan,
+  Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
 Din: [Eat Randy - Julian Smith]
 Din Fleetpaw: [Gloryhammer - The Unicorn Invasion of Dundee]
 Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
@@ -70,14 +70,16 @@ Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Count
     - Le Rossignol prelude, Henry Homesweet - Flex Out, Vernon Jane - Fuck Me, 'Vulfpeck
     ft. Antwaun Stanley - Birds of a feather, we rock together', Nujabes - Luv (Sic),
   Ezra Furman - Driving Down to LA, Shpongle - Room 23, Godspeed You! Black Emperor
-    - rockets fall on Rocket Falls, Magic City Hippies - Hush, "REOL - \u5BB5\u3005\
-    \u53E4\u4ECA", Johannes Brahms - String Sextet No. 2 Mvt I, Truxton - Automation
-    Astrosmash, Samuel Barber - Excursions No. 1 Un poco allegro, Django Django -
-    Found You, Milo - Landscaping, Shawn Wasabi - Otter Pop, Amon Tobin - Nightlife,
-  Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian - Sycamore, This
-    Will Destroy You - Little Smoke, King Gizzard and the Lizard Wizard - Rattlesnake,
-  Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
+    - rockets fall on Rocket Falls, This Will Destroy You - Communual Blood, Magic
+    City Hippies - Hush, "REOL - \u5BB5\u3005\u53E4\u4ECA", Johannes Brahms - String
+    Sextet No. 2 Mvt I, Truxton - Automation Astrosmash, Samuel Barber - Excursions
+    No. 1 Un poco allegro, Django Django - Found You, Milo - Landscaping, Shawn Wasabi
+    - Otter Pop, Amon Tobin - Nightlife, Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius
+    Streak, Caspian - Sycamore, This Will Destroy You - Little Smoke, King Gizzard
+    and the Lizard Wizard - Rattlesnake, Vitas - Opera 2, XTC - Complicated Game,
+  Worriers - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
+Miko: [DADABOTS - Wead]
 Peri: [Miss Eaves - Single A.F., Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth
     Vegas - Gritos Dulces, Busdriver - Imaginary Places, Hrishikesh Hirway - Song
     Exploder, BomBARDed - A Musical Dungeons and Dragons Adventure, Louis Cole - Weird
@@ -91,12 +93,13 @@ Proxy: [Iglooghost - White Gum, Ratboys - GL, 'Mitski - Goodbye, My Danish Sweet
   Fiona Apple - Fast As You Can, Leikeli47 - Miss Me, FKA twigs - Glass & Patron,
   "Bj\xF6rk - Pluto", Yuragi - night is young, Yasutaka Nakata - Give You More, Mykki
     Blanco - The Plug Won't, The World Is A Beautiful Place & I Am No Longer Afraid
-    To Die - The Future, Closer - Gift Shop, tUnE-yArDs - ABC 123, Nonsens & TREKKIE
-    TRAX CREW - Ballistic (feat. Ashnikko), Carly Rae Jepsen - Cut To The Feeling,
-  Clap Your Hands Say Yeah - The Vanity Of Trying, Yaeji - Last Breath, Hop Along
-    - How Simple, "\u2020\u2021\u2020 - Baba Vanga", Dan Deacon - Learning To Relax,
-  Baths - Adam Copies, Kelela - Onanon, Pedestrian Deposit - You Didn't Break Me,
-  The Body & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion, Rosemary & Garlic
+    To Die - The Future, "Mondo Grosso, Etsuko Yakushimaru - \u60D1\u661F\u30BF\u30F3\
+    \u30C8\u30E9", Closer - Gift Shop, tUnE-yArDs - ABC 123, Nonsens & TREKKIE TRAX
+    CREW - Ballistic (feat. Ashnikko), Carly Rae Jepsen - Cut To The Feeling, Clap
+    Your Hands Say Yeah - The Vanity Of Trying, Yaeji - Last Breath, Hop Along - How
+    Simple, "\u2020\u2021\u2020 - Baba Vanga", Dan Deacon - Learning To Relax, Baths
+    - Adam Copies, Kelela - Onanon, Pedestrian Deposit - You Didn't Break Me, The
+    Body & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion, Rosemary & Garlic
     - Wintering, Angel Olsen - Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks and
     Skeletons - The Void]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
