--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -19,11 +19,11 @@ Amdusias: [Paramore- Rose-colored Boy, Cavern of Antimatter- Malfunction, Bent K
   Alva Noto & Ryuichi Sakamoto- Glass, 'Oathbreaker- 10:56 / Second Son of R.', clipping.
     - The Deep, Hookworms- Ullswater, DJ Shadow - Horror Show, Protest the Hero -
     Caravan, Black Moth- Moonbow, Sorority Noise- No Halo, Shamir - Straight Boy,
-  Mutemath - Prytania, Meshuggah - I, Rapsody - Power, Sylvan LaCue- Empathy, TRUTHR-
-    Earth II, Kamasi Washington- Truth, London Grammar- Non Believer, Phoebe Bridgers-
-    Funeral, "Archspire- Involuntary Doppelg\xE4nger", Shame- Dust on Trial, Allie
-    X- Paper Love, Snarky Puppy- Shofukan, Pryapisme - Totipotence D'un Erg, Meniscus-
-    Doom]
+  Mutemath - Prytania, No Age- Cruise Control, Saba- Broken Girls, Meshuggah - I,
+  Rapsody - Power, Sylvan LaCue- Empathy, TRUTHR- Earth II, Kamasi Washington- Truth,
+  London Grammar- Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary\
+    \ Doppelg\xE4nger", Shame- Dust on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan,
+  Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
 Din: [Eat Randy - Julian Smith]
 Din Fleetpaw: [Gloryhammer - The Unicorn Invasion of Dundee]
 Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
@@ -45,22 +45,23 @@ Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Wndr
     \ \xE0 la Turk", Boards of Canada - nlogax, 'Saxon Shore - Secret Fire, Blinding
     Light', Fleet Foxes - Mykonos, Solange - Left Side Drive, This Will Destroy You
     - They Move on Tracks of Never-Ending Light, Royksopp - Boys, Beach House - The
-    Hours, Rodgers and Hammerstein/Yul Brynner - Puzzlement, The Books - Smells Like
-    Content, David Bergeaud - Scaling the Cliffs, Stravinsky - The National Anthem,
-  Broken Social Scene - 7/4 (Shoreline), Shpongle - Falling Awake, Doves - The Man
-    Who Sold Everything, My Bloody Valentine - I only said, They Move On Tracks of
-    Neverending Light, David Bowie - Modern Love, Ed Harrison - Annul, Dengue Fever
-    - Sni Bong, The Flaming Lips - Pompeii am Gotterdammerung, Magnus Palsson - Pressure
-    Cooker, Boards of Canada - Turquoise Hexagon Sun]
+    Hours, 'Saxon Shore - Secret Fire, Blinding Ligh', Rodgers and Hammerstein/Yul
+    Brynner - Puzzlement, The Books - Smells Like Content, David Bergeaud - Scaling
+    the Cliffs, Stravinsky - The National Anthem, Broken Social Scene - 7/4 (Shoreline),
+  Shpongle - Falling Awake, Doves - The Man Who Sold Everything, My Bloody Valentine
+    - I only said, They Move On Tracks of Neverending Light, David Bowie - Modern
+    Love, Ed Harrison - Annul, Dengue Fever - Sni Bong, The Flaming Lips - Pompeii
+    am Gotterdammerung, Magnus Palsson - Pressure Cooker, Boards of Canada - Turquoise
+    Hexagon Sun]
 Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
     - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
     Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
     Radio', Lesley Gore - It's My Party, Adore Delano - Negative Nancy, CupcakKe -
-    Cartoons, Kesha - Finding You, Dessa - Fire Drills, Nick Drake - Things Behind
-    the Sun, Cyndi Lauper - When You Were Mine, Celine Neon - Lengua, Magik\*Magik
-    - Front of the Line, 'Marvin Gaye, Studio Rio - Sexual Healing', Sufjan Stevens
-    - Tonya Harding (In D major), Fire Inc. - Nowhere Fast, Darren Hayes - A Conversation
-    With God]
+    Cartoons, Kesha - Finding You, Bebe Huxley - Darkside, Dessa - Fire Drills, Nick
+    Drake - Things Behind the Sun, Cyndi Lauper - When You Were Mine, Celine Neon
+    - Lengua, Magik\*Magik - Front of the Line, 'Marvin Gaye, Studio Rio - Sexual
+    Healing', Sufjan Stevens - Tonya Harding (In D major), Fire Inc. - Nowhere Fast,
+  Darren Hayes - A Conversation With God]
 Lunostophiles: ['Inital Talk, Dua Lipa - New Rules [Initial Talk Remix]', Dessa -
     Half of You]
 Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, Morten Lauridsen - Lux Aeterna,
@@ -74,11 +75,11 @@ Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, Morten Lauridsen - Lux Aetern
     - Room 23, Godspeed You! Black Emperor - rockets fall on Rocket Falls, This Will
     Destroy You - Communual Blood, Magic City Hippies - Hush, "REOL - \u5BB5\u3005\
     \u53E4\u4ECA", Johannes Brahms - String Sextet No. 2 Mvt I, Truxton - Automation
-    Astrosmash, Samuel Barber - Excursions No. 1 Un poco allegro, Django Django -
-    Found You, Milo - Landscaping, Shawn Wasabi - Otter Pop, Amon Tobin - Nightlife,
-  Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian - Sycamore, This
-    Will Destroy You - Little Smoke, King Gizzard and the Lizard Wizard - Rattlesnake,
-  Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
+    Astrosmash, "R\xF6yksopp - Compulsion", Samuel Barber - Excursions No. 1 Un poco
+    allegro, Django Django - Found You, Milo - Landscaping, Shawn Wasabi - Otter Pop,
+  Amon Tobin - Nightlife, Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian
+    - Sycamore, This Will Destroy You - Little Smoke, King Gizzard and the Lizard
+    Wizard - Rattlesnake, Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
 Miko: [DADABOTS - Wead]
 Peri: [Miss Eaves - Single A.F., Frost* - Heartstrings, Dengue Fever - Sni Bong, Darth
