--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -15,23 +15,24 @@ Amari: [Adam Betts - Drumbones, Sabrepulse - In End We Are All Cosmic]
 Amdusias: [Snarky Puppy- Shofukan, Kero Kero Bonito- Only Acting, Camp Cope- How To
     Socialize & Make Friends, Protest the Hero - Caravan, Thank You Scientist- Mr.
     Invisible, Laura Veirs- Margaret Sands, Frou Frou- Flicks, Kamasi Washington-
-    Truth, TRUTHR- Earth II, God Is An Astronaut- Seance Room, London Grammar- Non
-    Believer, 'Oathbreaker- 10:56 / Second Son of R.', Paramore- Rose-colored Boy,
-  Meshuggah - I, Thank You Scientist- Psychopomp, DJ Shadow - Horror Show, Mutemath
-    - Prytania, Sweet Valley- Chameleon, Alva Noto & Ryuichi Sakamoto- Glass, Soulwax-
-    Masterplanned, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9", Meniscus- Doom,
-  Sylvan LaCue- Empathy, clipping. - The Deep, Bent Knee- Terror Bird, Shamir - Straight
-    Boy, Hookworms- Ullswater, Pryapisme - Totipotence D'un Erg, Zola Jesus - Exhumed,
-  Rapsody - Power, Hella- Biblical Violence, Sorority Noise- No Halo, No Age- Cruise
-    Control, Saba- Broken Girls, St. Vincent - Los Ageless, Allie X- Paper Love, 'The
-    Library- You Don''t Need No Doctor, Sugar', "\u2605STAR GUiTAR- Live", Shame-
-    Dust on Trial, Cavern of Antimatter- Malfunction, Phoebe Bridgers- Funeral, "Archspire-\
-    \ Involuntary Doppelg\xE4nger", Black Moth- Moonbow, You Drive- Hold On, Illuminati
-    Hotties- Pressed 2 Death]
+    Truth, TRUTHR- Earth II, Dishwalla- Counting Blue Cars, God Is An Astronaut- Seance
+    Room, London Grammar- Non Believer, 'Oathbreaker- 10:56 / Second Son of R.', Paramore-
+    Rose-colored Boy, Meshuggah - I, Thank You Scientist- Psychopomp, DJ Shadow -
+    Horror Show, Mutemath - Prytania, Sweet Valley- Chameleon, Alva Noto & Ryuichi
+    Sakamoto- Glass, Soulwax- Masterplanned, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\
+    \u30B9", Meniscus- Doom, Sylvan LaCue- Empathy, clipping. - The Deep, Bent Knee-
+    Terror Bird, Shamir - Straight Boy, Hookworms- Ullswater, Pryapisme - Totipotence
+    D'un Erg, Zola Jesus - Exhumed, Rapsody - Power, Hella- Biblical Violence, Sorority
+    Noise- No Halo, No Age- Cruise Control, Saba- Broken Girls, St. Vincent - Los
+    Ageless, Allie X- Paper Love, 'The Library- You Don''t Need No Doctor, Sugar',
+  "\u2605STAR GUiTAR- Live", Shame- Dust on Trial, Cavern of Antimatter- Malfunction,
+  Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4nger", Black Moth-
+    Moonbow, You Drive- Hold On, Illuminati Hotties- Pressed 2 Death]
 Din: [Eat Randy - Julian Smith]
-Din Fleetpaw: [KORPIKLAANI - A Man With A Plan, Richard Cheese - Down with the Sickness,
-  David Hutter - Globgogabgalab, Gloryhammer - The Unicorn Invasion of Dundee, LIBYTHTH
-    - It's My Beak, 'Billy Joel, ft. David Hutter - Globglogabgalab - Piano Man']
+Din Fleetpaw: [Mount Eerie - Distortion, KORPIKLAANI - A Man With A Plan, Richard
+    Cheese - Down with the Sickness, David Hutter - Globgogabgalab, Gloryhammer -
+    The Unicorn Invasion of Dundee, LIBYTHTH - It's My Beak, 'Billy Joel, ft. David
+    Hutter - Globglogabgalab - Piano Man']
 Duster: [Strange Ranger - House Show, Electro Group - Captain New Mexico, Spare Snare
     - As a Matter of Fact, Swirlies - One Light Flashing I Love You, Unwound - Look
     A Ghost, Kincaid - Parachute, Women - Group Transport Hall, Mothers - BLAME KIT]
@@ -70,26 +71,26 @@ Lu: [CHVRCHES - Call It Off, Celine Neon - Lengua, Cyndi Lauper - When You Were 
   'Marvin Gaye, Studio Rio - Sexual Healing', Sufjan Stevens - Tonya Harding (In D
     major), The Struts - Primadonna Like Me]
 Lunostophiles: ['Inital Talk, Dua Lipa - New Rules [Initial Talk Remix]', Ghost -
-    Rats, Dessa - Half of You]
+    Rats, Hannah Diamond - Hi, Dessa - Half of You]
 Makyo: [Consider the Source - Closer to Home, Henry Homesweet - Flex Out, Godspeed
     You! Black Emperor - rockets fall on Rocket Falls, Lars Johan Werle - Canzone
     126 di Francesco Petrarca, Esperanza Spalding - Good Lava, Tan Dun - Ghost Opera,
-  Shawn Wasabi - Otter Pop, Easily Embarrassed - And to Start With, Hiatus Kaiyote
-    - Mobius Streak, 'Vulfpeck ft. Antwaun Stanley - Birds of a feather, we rock together',
-  Todd Reynolds/Nick Zammuto - Fast Pasture, Samuel Barber - Excursions No. 1 Un poco
-    allegro, Shpongle - Room 23, Truxton - Automation Astrosmash, Vernon Jane - Fuck
-    Me, "R\xF6yksopp and Robyn - Sayit", Leonard Bernstein - Symphony 3 "Kaddish",
-  Worriers - They/Them/Theirs, Milo - Landscaping, Amon Tobin - Nightlife, Nujabes
-    - Luv (Sic), "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP True To Original\
-    \ Edit", Johannes Brahms - String Sextet No. 2 Mvt I, Ezra Furman - Driving Down
-    to LA, XTC - Complicated Game, Magic City Hippies - Hush, Singularity - Print,
-  Django Django - Found You, Jean Sibelius -En etsi valtaa loistoa, "REOL - \u5BB5\
-    \u3005\u53E4\u4ECA", "R\xF6yksopp - Compulsion", Zammuto - It Can Feel So Good,
-  Vitas - Opera 2, Everything Everything - Cough Cough, Stravinsky - Le Rossignol
-    prelude, King Gizzard and the Lizard Wizard - Rattlesnake, Morten Lauridsen -
-    Lux Aeterna, Caspian - Sycamore, This Will Destroy You - Little Smoke, This Will
-    Destroy You - Communual Blood, Arthur Honegger - Concertino for Piano & Orchestra,
-  Haken - The Cockroach King]
+  Shawn Wasabi - Otter Pop, Sufjan Stevens - Djohariah, Easily Embarrassed - And to
+    Start With, Hiatus Kaiyote - Mobius Streak, 'Vulfpeck ft. Antwaun Stanley - Birds
+    of a feather, we rock together', Todd Reynolds/Nick Zammuto - Fast Pasture, Samuel
+    Barber - Excursions No. 1 Un poco allegro, Shpongle - Room 23, Truxton - Automation
+    Astrosmash, Vernon Jane - Fuck Me, "R\xF6yksopp and Robyn - Sayit", Leonard Bernstein
+    - Symphony 3 "Kaddish", Worriers - They/Them/Theirs, Milo - Landscaping, Amon
+    Tobin - Nightlife, Nujabes - Luv (Sic), "R\xF6yksopp - Electric Counterpoint III.\
+    \ Fast - RYXP True To Original Edit", Johannes Brahms - String Sextet No. 2 Mvt
+    I, Ezra Furman - Driving Down to LA, XTC - Complicated Game, Magic City Hippies
+    - Hush, Singularity - Print, Django Django - Found You, Jean Sibelius -En etsi
+    valtaa loistoa, "REOL - \u5BB5\u3005\u53E4\u4ECA", "R\xF6yksopp - Compulsion",
+  Zammuto - It Can Feel So Good, Vitas - Opera 2, Everything Everything - Cough Cough,
+  Stravinsky - Le Rossignol prelude, King Gizzard and the Lizard Wizard - Rattlesnake,
+  Morten Lauridsen - Lux Aeterna, Caspian - Sycamore, This Will Destroy You - Little
+    Smoke, This Will Destroy You - Communual Blood, Arthur Honegger - Concertino for
+    Piano & Orchestra, Haken - The Cockroach King]
 Mando: [Negrita - Rotolando Verso Sud]
 Miko: [Kastor - Melody I Hear In Your Heartbeat, DADABOTS - Wead]
 Peri: [Miss Eaves - Single A.F., BomBARDed - A Musical Dungeons and Dragons Adventure,
@@ -103,26 +104,26 @@ Peri: [Miss Eaves - Single A.F., BomBARDed - A Musical Dungeons and Dragons Adve
     Fair]
 Proxy: [Speedy Ortiz - Fun, Ratboys - GL, Leikeli47 - Miss Me, The World Is A Beautiful
     Place & I Am No Longer Afraid To Die - The Future, Melt-Banana - The Hive, Dessa
-    - Good Grief, Kelela - Onanon, "\u2020\u2021\u2020 - Baba Vanga", Pedestrian Deposit
-    - You Didn't Break Me, "Bj\xF6rk - Pluto", Clap Your Hands Say Yeah - The Vanity
-    Of Trying, Baths - Superstructure, Mykki Blanco - The Plug Won't, Carly Rae Jepsen
-    - Cut To The Feeling, Alice Glass - Without Love (Chelsea Wolfe Remix), FKA twigs
-    - Glass & Patron, Baths - Adam Copies, Bjork - Arisen My Senses, Sote - Plural,
-  Sidewalks and Skeletons - The Void, Hop Along - How Simple, Dan Deacon - Learning
-    To Relax, Yuragi - night is young, Iglooghost - White Gum, Nonsens & TREKKIE TRAX
-    CREW - Ballistic (feat. Ashnikko), Yasutaka Nakata - Give You More, Brockhampton
-    - JUNKY, Closer - Gift Shop, Deerhoof - I Will Spite Survive (feat. Jenn Wasner),
-  Yaeji - Last Breath, SZA - Prom, tUnE-yArDs - ABC 123, 'Mitski - Goodbye, My Danish
-    Sweetheart', Angel Olsen - Shut Up Kiss Me, Charisma.com - NOW, Fiona Apple -
-    Fast As You Can, Rosemary & Garlic - Wintering, Plastic Girl in Closet - VAMPIRE,
-  The Body & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion, "Mondo Grosso,\
-    \ Etsuko Yakushimaru - \u60D1\u661F\u30BF\u30F3\u30C8\u30E9", Iglooghost - Black
-    Light Ultra, 'Now, Now - MJ']
+    - Good Grief, Kelela - Onanon, "\u2020\u2021\u2020 - Baba Vanga", boygenius -
+    Stay Down, Pedestrian Deposit - You Didn't Break Me, "Bj\xF6rk - Pluto", Clap
+    Your Hands Say Yeah - The Vanity Of Trying, Baths - Superstructure, Mykki Blanco
+    - The Plug Won't, Carly Rae Jepsen - Cut To The Feeling, Alice Glass - Without
+    Love (Chelsea Wolfe Remix), FKA twigs - Glass & Patron, Baths - Adam Copies, Bjork
+    - Arisen My Senses, Sote - Plural, Sidewalks and Skeletons - The Void, Hop Along
+    - How Simple, Dan Deacon - Learning To Relax, Yuragi - night is young, Iglooghost
+    - White Gum, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Yasutaka
+    Nakata - Give You More, Brockhampton - JUNKY, Closer - Gift Shop, Deerhoof - I
+    Will Spite Survive (feat. Jenn Wasner), Yaeji - Last Breath, SZA - Prom, tUnE-yArDs
+    - ABC 123, 'Mitski - Goodbye, My Danish Sweetheart', Angel Olsen - Shut Up Kiss
+    Me, Charisma.com - NOW, Fiona Apple - Fast As You Can, Rosemary & Garlic - Wintering,
+  Plastic Girl in Closet - VAMPIRE, The Body & Full Of Hell - Earth Is A Cage, Remo-con
+    - Vermillion, "Mondo Grosso, Etsuko Yakushimaru - \u60D1\u661F\u30BF\u30F3\u30C8\
+    \u30E9", Iglooghost - Black Light Ultra, 'Now, Now - MJ']
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
 Traedon: [Vanessa Carlton - Blue Pool, The Verve Pipe - Medicate Myself, Ayreon -
     Computer Eyes]
-Veyote: [Tchami - World To Me (feat. Luke James), Chris Lake - Give Her Right Back
-    (feat. Dances With White Girls), Metrik - Hi!, "Above & Beyond - My Own Hymn (feat.\
-    \ Zo\xEB Johnston)", The Mary Nixons - Adrian]
+Veyote: [Modest Mouse - Coyotes, Tchami - World To Me (feat. Luke James), Chris Lake
+    - Give Her Right Back (feat. Dances With White Girls), Metrik - Hi!, "Above &\
+    \ Beyond - My Own Hymn (feat. Zo\xEB Johnston)", The Mary Nixons - Adrian]
