--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -11,24 +11,26 @@ Alteq: [Matthew Good Band - Running for Home, Kitten - I Did It!, Thievery Corpo
     Sky, Broken Social Scene - Gonna Get Better, Majical Cloudz - Turns Turns Turns,
   Wells Fargo -- Coming Home, Will Smith - Switch, LCD Soundstyem - You Can't Hide
     / Shame on You, John Grant - Snug Slacks]
-Amari: [Adam Betts - Drumbones, Sabrepulse - In End We Are All Cosmic]
+Amari: [Forests - You Seem A Little Anxious, Adam Betts - Drumbones, Sabrepulse -
+    In End We Are All Cosmic]
 Amdusias: [Paramore- Rose-colored Boy, Fox Capture Plan - Greatest Blue, Cavern of
     Antimatter- Malfunction, Bent Knee- Terror Bird, Kero Kero Bonito- Only Acting,
   St. Vincent - Los Ageless, Frou Frou- Flicks, 'The Library- You Don''t Need No Doctor,
-    Sugar', Soulwax- Masterplanned, Thank You Scientist- Psychopomp, Zola Jesus -
-    Exhumed, Thank You Scientist- Mr. Invisible, Laura Veirs- Margaret Sands, Hella-
-    Biblical Violence, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9", "\u2605STAR\
-    \ GUiTAR- Live", Camp Cope- How To Socialize & Make Friends, Alva Noto & Ryuichi
-    Sakamoto- Glass, 'Oathbreaker- 10:56 / Second Son of R.', clipping. - The Deep,
-  Hookworms- Ullswater, DJ Shadow - Horror Show, Protest the Hero - Caravan, Black
-    Moth- Moonbow, You Drive- Hold On, Sweet Valley- Chameleon, Sorority Noise- No
-    Halo, Shamir - Straight Boy, Mutemath - Prytania, No Age- Cruise Control, Saba-
-    Broken Girls, Meshuggah - I, Illuminati Hotties- Pressed 2 Death, Rapsody - Power,
-  Sylvan LaCue- Empathy, TRUTHR- Earth II, Dishwalla- Counting Blue Cars, God Is An
-    Astronaut- Seance Room, Kamasi Washington- Truth, London Grammar- Non Believer,
-  Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4nger", Shame- Dust
-    on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan, Pryapisme - Totipotence
+    Sugar', Soulwax- Masterplanned, Thank You Scientist- Psychopomp, Jinjer- Perennial,
+  Zola Jesus - Exhumed, Thank You Scientist- Mr. Invisible, Laura Veirs- Margaret
+    Sands, Hella- Biblical Violence, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9",
+  "\u2605STAR GUiTAR- Live", Camp Cope- How To Socialize & Make Friends, Alva Noto
+    & Ryuichi Sakamoto- Glass, 'Oathbreaker- 10:56 / Second Son of R.', clipping.
+    - The Deep, Hookworms- Ullswater, DJ Shadow - Horror Show, Protest the Hero -
+    Caravan, Black Moth- Moonbow, You Drive- Hold On, Sweet Valley- Chameleon, Sorority
+    Noise- No Halo, Shamir - Straight Boy, Mutemath - Prytania, No Age- Cruise Control,
+  Saba- Broken Girls, Meshuggah - I, Illuminati Hotties- Pressed 2 Death, Rapsody
+    - Power, Sylvan LaCue- Empathy, TRUTHR- Earth II, Dishwalla- Counting Blue Cars,
+  God Is An Astronaut- Seance Room, Kamasi Washington- Truth, London Grammar- Non
+    Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4nger",
+  Shame- Dust on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan, Pryapisme - Totipotence
     D'un Erg, Meniscus- Doom]
+Chiaro: [Flying Lotus - And The World Laughs With You]
 Din: [Eat Randy - Julian Smith]
 Din Fleetpaw: [Richard Cheese - Down with the Sickness, David Hutter - Globgogabgalab,
   Gloryhammer - The Unicorn Invasion of Dundee, LIBYTHTH - It's My Beak, 'Billy Joel,
@@ -78,21 +80,22 @@ Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, Fiona Apple - Hot Knife, Mort
     Lauridsen - Lux Aeterna, "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP\
     \ True To Original Edit", Zammuto - It Can Feel So Good, Esperanza Spalding -
     Good Lava, Everything Everything - Cough Cough, "R\xF6yksopp and Robyn - Sayit",
-  Consider the Source - Closer to Home, Singularity - Print, Lars Johan Werle - Canzone
-    126 di Francesco Petrarca, Jean Sibelius -En etsi valtaa loistoa, Leonard Bernstein
-    - Symphony 3 "Kaddish", Stravinsky - Le Rossignol prelude, Henry Homesweet - Flex
-    Out, Vernon Jane - Fuck Me, 'Vulfpeck ft. Antwaun Stanley - Birds of a feather,
-    we rock together', Nujabes - Luv (Sic), Ezra Furman - Driving Down to LA, Shpongle
-    - Room 23, Godspeed You! Black Emperor - rockets fall on Rocket Falls, This Will
-    Destroy You - Communual Blood, Arthur Honegger - Concertino for Piano & Orchestra,
-  Magic City Hippies - Hush, "REOL - \u5BB5\u3005\u53E4\u4ECA", Johannes Brahms -
-    String Sextet No. 2 Mvt I, Truxton - Automation Astrosmash, "R\xF6yksopp - Compulsion",
-  Samuel Barber - Excursions No. 1 Un poco allegro, Haken - The Cockroach King, Django
-    Django - Found You, Milo - Landscaping, Shawn Wasabi - Otter Pop, Amon Tobin -
-    Nightlife, Sufjan Stevens - Djohariah, Easily Embarrassed - And to Start With,
-  Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian - Sycamore, This
-    Will Destroy You - Little Smoke, King Gizzard and the Lizard Wizard - Rattlesnake,
-  Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
+  Lemon Demon - Touch Tone Telephone, Consider the Source - Closer to Home, Singularity
+    - Print, Lars Johan Werle - Canzone 126 di Francesco Petrarca, Jean Sibelius -En
+    etsi valtaa loistoa, Leonard Bernstein - Symphony 3 "Kaddish", Stravinsky - Le
+    Rossignol prelude, Henry Homesweet - Flex Out, Vernon Jane - Fuck Me, 'Vulfpeck
+    ft. Antwaun Stanley - Birds of a feather, we rock together', Nujabes - Luv (Sic),
+  Ezra Furman - Driving Down to LA, Shpongle - Room 23, Godspeed You! Black Emperor
+    - rockets fall on Rocket Falls, This Will Destroy You - Communual Blood, Arthur
+    Honegger - Concertino for Piano & Orchestra, Magic City Hippies - Hush, "REOL\
+    \ - \u5BB5\u3005\u53E4\u4ECA", Johannes Brahms - String Sextet No. 2 Mvt I, Truxton
+    - Automation Astrosmash, "R\xF6yksopp - Compulsion", Samuel Barber - Excursions
+    No. 1 Un poco allegro, Haken - The Cockroach King, Django Django - Found You,
+  Milo - Landscaping, Shawn Wasabi - Otter Pop, Amon Tobin - Nightlife, Sufjan Stevens
+    - Djohariah, Easily Embarrassed - And to Start With, Tan Dun - Ghost Opera, Hiatus
+    Kaiyote - Mobius Streak, Caspian - Sycamore, This Will Destroy You - Little Smoke,
+  King Gizzard and the Lizard Wizard - Rattlesnake, Vitas - Opera 2, XTC - Complicated
+    Game, Worriers - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
 Miko: [Kastor - Melody I Hear In Your Heartbeat, DADABOTS - Wead]
 Peri: [Klimchak - Rain Wings, Miss Eaves - Single A.F., Frost* - Heartstrings, Dengue
@@ -123,6 +126,8 @@ Proxy: [Haru Nemuri - narashite, Plastic Girl in Closet - VAMPIRE, Iglooghost - 
   Angel Olsen - Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks and Skeletons - The
     Void]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
+Shuyo: ["Ic3peak - \u0413\u0440\u0443\u0441\u0442\u043D\u0430\u044F \u0441\u0443\u043A\
+    \u0430"]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
 Traedon: [Vanessa Carlton - Blue Pool, The Verve Pipe - Medicate Myself, Ayreon -
